Fix a refcount issue on device proxy object

https://bugzilla.gnome.org/show_bug.cgi?id=674410