libgupnp/gupnp-network-manager.c
@@ -125,7 +125,7 @@ nm_device_new (GUPnPNetworkManager *manager,
         nm_device = g_slice_new0 (NMDevice);
 
         nm_device->manager = manager;
-        nm_device->proxy = g_object_ref (device_proxy);
+        nm_device->proxy = device_proxy;
 
         return nm_device;
 }
